# mystereo

./: .gitignore  CLAUDE.md  README.md  environment.yml  offline_ba_result.json  record.txt  run_all.sh  run_all_test.sh  run_pipeline.py  run_pipeline_panoramic_01.py
match_point_test/: eval_first_frame_epipolar_error.py  filter_matches_by_gt_fundamental.py  panoramic_01_frame0000_epipolar_error.json  panoramic_01_matches_frame0000_dsym_lt_2px.json  panoramic_01_matches_gtpose_dsym_le_2px.stats.json  panoramic_04_matches_gtpose_dsym_le_2px.json  panoramic_04_matches_gtpose_dsym_le_2px.stats.json  panoramic_05_matches_gtpose_dsym_le_2px.json  panoramic_05_matches_gtpose_dsym_le_2px.stats.json  panoramic_06_matches_gtpose_dsym_le_2px.stats.json  panoramic_07_matches_gtpose_dsym_le_2px.stats.json
matchmodel/SuperPointPretrainedNetwork/: LICENSE  README.md  demo_superpoint.py  rundemo.ipynb
stereo_calib/: CMakeLists.txt  example_init_params.txt  example_input.json
stereo_calib/data/: camera_params.json
stereo_calib/docs/: point_rejection.md
stereo_calib/result/: offline_ba_result.json
stereo_calib/scripts/: blender.py  blender_checkerboard.py  blender_distortion.py  eval_stereo.py  plot_ba_history.py  superpoint_stereo_match.py  visualize_matches.py
stereo_calib/scripts/match_point_test/: eval_first_frame_epipolar_error.py  filter_matches_by_gt_fundamental.py  panoramic_01_frame0000_epipolar_error.json  距离记录.txt
stereo_calib/src/: frame_score_utils.cc  frame_score_utils.h  offline_stereo_ba.cc  offline_stereo_ba.h  run_offline_stereo_ba.cc  run_stereo_calib.cc  stereo_eval.cc  stereo_eval.h  stereo_factors.cc  stereo_factors.h  stereo_io.cc  stereo_io.h  stereo_optimizer.cc  stereo_optimizer.h  stereo_types.h  track_builder.cc  track_builder.h
stereo_calib/src/coordinators/: optimization_coordinator.cc  optimization_coordinator.h
stereo_calib/src/core/: camera_math.cc  camera_math.h
stereo_calib/src/services/: bundle_adjustment_service.cc  bundle_adjustment_service.h  evaluation_service.cc  evaluation_service.h  initialization_service.cc  initialization_service.h  outlier_rejection_service.cc  outlier_rejection_service.h  track_service.cc  track_service.h
(+2 files in other folders)
